--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Sceny/platformowka.tscn", "res://Sceny/Player.tscn", "res://Sceny/chest.tscn")
-current_scene="res://Sceny/chest.tscn"
+open_scenes=PackedStringArray("res://Sceny/platformowka.tscn", "res://Sceny/Player.tscn")
+current_scene="res://Sceny/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
