--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Sceny/platformowka.tscn", "res://Sceny/Player.tscn")
-current_scene="res://Sceny/Player.tscn"
+open_scenes=PackedStringArray("res://Sceny/Player.tscn", "res://Sceny/platformowka.tscn")
+current_scene="res://Sceny/platformowka.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 23)
 
 [ScriptEditor]
 
