--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/Objects/Chest/Chest Close 01.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Sceny/", "res://Assets/", "res://Assets/Treasure Hunters/", "res://Assets/Treasure Hunters/Treasure Hunters/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/07-Attack/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/04-Fall/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/Terrain/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/Objects/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/Objects/Chest/", "res://Assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Sceny/", "res://Assets/", "res://Assets/Treasure Hunters/", "res://Assets/Treasure Hunters/Treasure Hunters/", "res://Assets/Treasure Hunters/Treasure Hunters/Wood and Paper UI/", "res://Assets/Treasure Hunters/Treasure Hunters/Wood and Paper UI/Sprites/", "res://Assets/Treasure Hunters/Treasure Hunters/Wood and Paper UI/Sprites/Yellow Board/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/07-Attack/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/04-Fall/", "res://Assets/Treasure Hunters/Treasure Hunters/The Crusty Crew/Sprites/Pink Star/01-Idle/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/Objects/", "res://Assets/Treasure Hunters/Treasure Hunters/Palm Tree Island/Sprites/Objects/Chest/", "res://Assets/Treasure Hunters/Treasure Hunters/Captain Clown Nose/Sprites/Captain Clown Nose/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -33,6 +33,7 @@ current_scene="res://Sceny/platformowka.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=13
 
 [EditorWindow]
 
